--- a/course_discovery/apps/publisher/templates/publisher/course_run_detail/_drupal.html
+++ b/course_discovery/apps/publisher/templates/publisher/course_run_detail/_drupal.html
@@ -99,7 +99,7 @@
             {% trans "Self Paced" %}
             {% include "publisher/course_run_detail/_clipboard.html" %}
         </div>
-        <div class="copy">{{ course_run.pacing_type }}</div>
+        <div class="copy">{{ course_run.lms_pacing }}</div>
     </div>
     <div class="info-item">
         <div class="heading">
