--- a/course_discovery/apps/publisher/templates/publisher/course_detail/_widgets.html
+++ b/course_discovery/apps/publisher/templates/publisher/course_detail/_widgets.html
@@ -23,7 +23,11 @@
                 <div class="layout-col layout-col-b course-run-details">
                     <div class="courserun-details">
                         <a class="courserun-detail-link" href="{% url 'publisher:publisher_course_run_detail' pk=course_run.id %}">
-                            {{ course_run.start.date }} - {{ course_run.lms_pacing_type_display }}
+                            {% if publisher_remove_pacing_type_editing %}
+                                {{ course_run.start.date }} - {{ course_run.lms_pacing_type_display }}
+                            {% else %}
+                                {{ course_run.start.date }} - {{ course_run.get_pacing_type_display }}
+                            {% endif %}
                         </a>
                     </div>
                     <div class="studio-url">
