--- a/course_discovery/apps/publisher/templates/publisher/course_run_detail/_studio.html
+++ b/course_discovery/apps/publisher/templates/publisher/course_run_detail/_studio.html
@@ -43,7 +43,15 @@
                 {% trans "Pacing Type" %}
                 {% include "publisher/course_run_detail/_clipboard.html" %}
             </div>
-            <div class="copy">{{ course_run.lms_pacing }}</div>
+            <div class="copy">
+                {% if publisher_remove_pacing_type_editing %}
+                    <div>Hi</div>
+                    {{ course_run.lms_pacing }}
+                {% else %}
+                    <div>Hello</div>
+                    {{ course_run.pacing_type }}
+                {% endif %}
+            </div>
         </div>
     </div>
     <div class="clearfix"></div>
